--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
+    "highlight.js": "^11.2.0",
     "shadow-cljs": "^2.14.3"
   },
   "dependencies": {
-    "react-dom": "^17.0.2"
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
